[package]
name = "tweetboat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

twilight = "0.16.0-rc.1"
twilight-gateway = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"

[profile.release]
panic = "abort"
